# EVMcoursework

EVM/: ALU.cpp  ALU.h  CMakeLists.txt  CU.cpp  CU.h  command.h  keys.h  main.cpp  myBigChars.cpp  myBigChars.h  myReadKey.cpp  myReadKey.h  mySimpleComputer.cpp  mySimpleComputer.h  myTerm.cpp  myTerm.h  myTermColors.h  timersHandler.cpp  timersHandler.h
simpleAssembler/: CMakeLists.txt  main.cpp
simpleBasic/: CMakeLists.txt  main.cpp
